--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CPPstudy)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(CPPstudy main.cpp cast/castTest.cpp vartype/varTest.cpp)
+add_executable(CPPstudy main.cpp cast/castTest.cpp vartype/varTest.cpp qualifier/qualifierTest.cpp)
